--- a/VoicePassword/project.config.json
+++ b/VoicePassword/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.7.2",
 	"appid": "wx0e319ca0104446b9",
-	"projectname": "%E5%B0%8F%E5%8F%A4%E8%AE%A1%E7%89%8C",
+	"projectname": "%E5%8F%A3%E4%BB%A4%E7%BA%A2%E5%8C%85",
 	"condition": {
 		"search": {
 			"current": -1,
