--- a/VoicePassword/project.config.json
+++ b/VoicePassword/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.7.2",
-	"appid": "wx0e319ca0104446b9",
+	"appid": "wxc31c318baf22ac82",
 	"projectname": "%E5%8F%A3%E4%BB%A4%E7%BA%A2%E5%8C%85",
 	"condition": {
 		"search": {
